Added instructions for ERPs including colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="topleft" class="resize-on-mobile">
 			<h1 id="title">Intracranial EEG Processing of Auditory Feedback in Perisylvian Cortex</h1>
 			<div id="infoleft" >
-			<p id="infopara" class="hide-on-mobile">Based on data from Kurteff et al. (in prep). Participants sentences aloud and listened to playback of their own voice.</p>
+			<p id="infopara" class="hide-on-mobile">Based on data from Kurteff et al. (in prep). Participants sentences aloud and listened to playback of their own voice. Click on electrodes to see their responses during <span style="color: #873b8a; font-weight: bold">speaking</span>, <span style="color: #257036; font-weight: bold">listening</span>, and a <span style="color: #f4a127; font-weight: bold">click</span> sound.</p>
 			<ul id="navhelp" class="hide-on-mobile">
 				<li><b>Rotate:</b> Click and drag</li>
 				<li><b>Zoom:</b> Scroll</li>
