--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><b>Rotate:</b> Click and drag</li>
 				<li><b>Zoom:</b> Scroll</li>
 				<li><b>Pan:</b> Two-finger click and drag / shift-click and drag</li>
-				<li><b><a href="showSlide(0);">View tutorial</a></b></li>
+				<li><b><a href="javascript:showSlide(0);">View tutorial</a></b></li>
 			</ul>
 			</div>
 			<p id="hidepara" class="hide-on-mobile"><a id="hidelink" href="#">((Hide this panel))</a></p>
