--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	        <div id="tutorialSlide1" class="tutorialSlide">
 	            <h2>Brain Viewer Tour</h2>
 	            <p>This is an interactive viewer to accompany our paper <a href="https://doi.org/10.1101/2024.05.14.593257" target="_new">Processing of auditory feedback in perisylvian and insular cortex</a>. In our study, participants <span style="color: #873b8a; font-weight: bold">read sentences aloud</span> and <span style="color: #257036; font-weight: bold">listened to playback</span> of their own voice.</p>
-	            <p><img src="images/01_tutorial_task.png" width=500px, alt="Schematic of reading + playback audio. Participants first heard a click, then read sentences aloud while hearing their own voice. After a second click sound, their own voice was played back to them."/></p>
+	            <p><img src="images/01_tutorial_task.png" class="resize-on-mobile" width=500px, alt="Schematic of reading + playback audio. Participants first heard a click, then read sentences aloud while hearing their own voice. After a second click sound, their own voice was played back to them."/></p>
 	            <p>We recorded neural data from intracranial electrodes from patients with epilepsy as they performed this task.</p>
 	            <p><i>Research performed by Garret Lynn Kurteff, Alyssa M. Field, Saman Asghar, Elizabeth C. Tyler-Kabara, Dave Clarke, Howard L. Weiner, Anne E. Anderson, Andrew J. Watrous, Robert J. Buchanan, Pradeep N. Modur, Liberty S. Hamilton.</i></p>
 	            <p><i>Viewer created by Liberty Hamilton using 3js</i></p>
@@ -62,7 +62,7 @@
 	        <div id="tutorialSlide2" class="tutorialSlide">
 	            <h2>Consistent and Inconsistent</h2>
 	            <p>Trials were split up into <span style="color: #577aea; font-weight:bold">consistent</span> and <span style="color: #ca7949; font-weight:bold" >inconsistent</span> playback, where consistent matched exactly what they had said in that trial, and inconsistent playback would play audio of a previous sentence. In all cases, the audio is spoken by the patient.</p>
-	            <p><img src="images/02_con_in.png" width=500px, alt="Schematic of consistent vs. inconsistent playback"/></p>
+	            <p><img src="images/02_con_in.png" class="resize-on-mobile" width=500px, alt="Schematic of consistent vs. inconsistent playback"/></p>
 	            <button onclick="prevSlide(1)">Previous</button>
 	            <button onclick="nextSlide(2)">Next</button>
 	            <button onclick="endTutorial()">Close Tutorial</button>
