Updated citation to J Neuro

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<div id="topleft" class="resize-on-mobile">
 			<h1 id="title">Processing of auditory feedback in perisylvian and insular cortex</h1>
 			<div id="infoleft" >
-			<p id="infopara" class="hide-on-mobile">Read the paper: <a href="https://doi.org/10.1101/2024.05.14.593257" target="_new">Kurteff et al. Biorxiv 2024.</a></p>
+			<p id="infopara" class="hide-on-mobile">Read the paper: <a href="https://doi.org/10.1523/JNEUROSCI.1109-24.2024" target="_new">Kurteff GL, Field AM, Asghar S, Tyler-Kabara EC, Clarke D, Weiner HL, Anderson AE, Watrous AJ, Buchanan RJ, Modur PN, Hamilton LS. Spatiotemporal mapping of auditory onsets during speech production. Journal of Neuroscience. 2024 Oct 22.
+</a></p>
 			<ul id="navhelp" class="hide-on-mobile">
 				<li><b>Rotate:</b> Click and drag</li>
 				<li><b>Zoom:</b> Scroll</li>
@@ -51,7 +52,7 @@
 		<div id="tutorialOverlay" class="overlay">
 	        <div id="tutorialSlide1" class="tutorialSlide">
 	            <h2>Brain Viewer Tour</h2>
-	            <p>This is an interactive viewer to accompany our paper <a href="https://doi.org/10.1101/2024.05.14.593257" target="_new">Processing of auditory feedback in perisylvian and insular cortex</a>. In our study, participants <span style="color: #873b8a; font-weight: bold">read sentences aloud</span> and <span style="color: #257036; font-weight: bold">listened to playback</span> of their own voice.</p>
+	            <p>This is an interactive viewer to accompany our paper <a href="https://doi.org/10.1523/JNEUROSCI.1109-24.2024" target="_new">Processing of auditory feedback in perisylvian and insular cortex</a>. In our study, participants <span style="color: #873b8a; font-weight: bold">read sentences aloud</span> and <span style="color: #257036; font-weight: bold">listened to playback</span> of their own voice.</p>
 	            <p><img src="images/01_tutorial_task.png" class="resize-on-mobile" width=500px, alt="Schematic of reading + playback audio. Participants first heard a click, then read sentences aloud while hearing their own voice. After a second click sound, their own voice was played back to them."/></p>
 	            <p>We recorded neural data from intracranial electrodes from patients with epilepsy as they performed this task.</p>
 	            <p><i>Research performed by Garret Lynn Kurteff, Alyssa M. Field, Saman Asghar, Elizabeth C. Tyler-Kabara, Dave Clarke, Howard L. Weiner, Anne E. Anderson, Andrew J. Watrous, Robert J. Buchanan, Pradeep N. Modur, Liberty S. Hamilton.</i></p>
