--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	</head>
 	<body>
 		<div id="topleft" class="resize-on-mobile">
-			<h1 id="title">Processing of auditory feedback in perisylvian and insular cortex</h1>
+			<h1 id="title">Spatiotemporal mapping of auditory onsets during speech production</h1>
 			<div id="infoleft" >
-			<p id="infopara" class="hide-on-mobile">Read the paper: <a href="https://doi.org/10.1523/JNEUROSCI.1109-24.2024" target="_new">Kurteff GL, Field AM, Asghar S, Tyler-Kabara EC, Clarke D, Weiner HL, Anderson AE, Watrous AJ, Buchanan RJ, Modur PN, Hamilton LS. Spatiotemporal mapping of auditory onsets during speech production. Journal of Neuroscience. 2024 Oct 22.
+			<p id="infopara" class="hide-on-mobile">Read the paper: <a href="https://doi.org/10.1523/JNEUROSCI.1109-24.2024" target="_new">Kurteff GL, Field AM, Asghar S, Tyler-Kabara EC, Clarke D, Weiner HL, Anderson AE, Watrous AJ, Buchanan RJ, Modur PN, Hamilton LS. 2024 Oct 22.
 </a></p>
 			<ul id="navhelp" class="hide-on-mobile">
 				<li><b>Rotate:</b> Click and drag</li>
